etch-a-sketch.css
#board {
    background: plum;
    border: 4px solid indigo;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.pixel {
    border: 1px solid black;
    background: white;
    width: 30px;
    height: 30px;
    align-self: center;
}

